--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <canvas id="canvas1"></canvas>
     <div class="hidden">
         <img src="/images/planet.png" id="planet" />
+        <img src="/images/player.png" id="player">
     </div>
    
     
