--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="hidden">
         <img src="/images/planet.png" id="planet" />
         <img src="/images/player.png" id="player">
+        <img src="/images/asteroid.png" id="asteroid">
+        <img src="/images/lobstermorph.png" id="lobstermorph">
     </div>
    
     
